--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: chuhang 技术不宅
 subtitle: A technology blog for myself.
-description: this is a test.
+description: chuhang123.
 author: chuhang
 language: zh-CN
 timezone: Asia/Shanghai
